# Python

./: Readme.md  file.txt  log.txt  my_file.txt  requirements.txt  tables.txt  text.txt  this.txt
Chapter 1 Intro_Python/: Questions.md  Solution4.py
Chapter 1 PS/: Solution1.py  Solution2.py  Solution3.py
Chapter 10 OOPS/: 02_intance_vs_class_attr.py  03_self.py  04_constructor.py  Introduction_OOP.md
Chapter 10 OOPS-1/: 01_Class.py  staticmethod.py
Chapter 11 OOPS-2/: 01_inheritance.py  02_multiple_inheritance.py  03_multilevel_inheritance.py  04_super.py  05_class_methods.py  06_property_decorator.py  07_operator_overloading.py
Chapter 12 Advanced-Python-1/: 01_walrus.py  02_types.py  03_match_case.py  04_exception.py  05_raising_exception.py  06_try_else.py  07_try_except_finally.py  09_global.py  10_enumerate.py  11_list_comprehensions.py  module.py
Chapter 13 Advanced-Python-2/: 02_lamba.py  04_format.py  05_map.py  06_filter.py  07_reduce.py  requirements.txt
Chapter 2 VD/: 04_Operators.py  06_Input.py  Questions.md
Chapter 2 Variable_Datatypes/: 01_Variables.py  02_Datatypes.py  03_Rules_Variables.py  05_Type.py  06_Input.py  Variable_Datatype_Intro.md
Chapter 3 String/: Escape_Seq.py  Introduction.py  String_Func.py  String_Intro.md
Chapter 4 List_Tuple/: 01_List.py  02_LIst_Methods.py  03_Tuple.py  04_MetodsOfTuple.py  List_Tuple_Intro.md
Chapter 5 Dictionary_Set/: 01_Dict.py  02_Dict_Methods.py  03_Sets.py  04_Set_Methods.py  (+2 more)
MEGA_PROJECT-1_JARVIS/: .gitignore  client.py  main.py  musicLibrary.py  pyproject.toml  requirements.txt
(+164 files in other folders)
